--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -790,7 +790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
       "metadata": {
         "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
@@ -837,14 +837,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
       "metadata": {
-        "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a"
+        "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
+        "outputId": "326c7293-0cc5-4217-db82-1cb374ad5a77",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter any number:7\n",
+            "Factorial is 7\n",
+            "Factorial is 42\n",
+            "Factorial is 210\n",
+            "Factorial is 840\n",
+            "Factorial is 2520\n",
+            "Factorial is 5040\n",
+            "Factorial is 5040\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to calculate the factorial of a number using a while loop. (User input for the number)"
+        "# Write a Python program to calculate the factorial of a number using a while loop. (User input for the number)\n",
+        "n=int(input(\"Enter any number:\"))\n",
+        "f=1\n",
+        "while n>=1:\n",
+        "  f*=n\n",
+        "  n-=1\n",
+        "  print(\"Factorial is\",f)\n"
       ]
     },
     {
