--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -837,7 +837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
       "metadata": {
         "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
@@ -873,15 +873,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Bqgs5XtisMUh"
+      },
+      "id": "Bqgs5XtisMUh"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "FLDlRWkasNBL"
+      },
+      "id": "FLDlRWkasNBL"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "id": "68467ccc-d696-4ef1-84c4-164c9d87f755",
       "metadata": {
-        "id": "68467ccc-d696-4ef1-84c4-164c9d87f755"
+        "id": "68467ccc-d696-4ef1-84c4-164c9d87f755",
+        "outputId": "b08b202d-0ff1-41da-93c7-0bb19e91f68f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of terms5\n",
+            "fibonacci sequence:\n",
+            "0 1 1 2 3 "
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the Fibonacci sequence up to n terms. (User input for n)"
+        "\n",
+        "# Write a Python program to print the Fibonacci sequence up to n terms. (User input for n)\n",
+        "n=int(input(\"Enter the number of terms\"))\n",
+        "a=0\n",
+        "b=1\n",
+        "if n<=0:\n",
+        "  print(\"please enter a positive number\")\n",
+        "else:\n",
+        "  print(\"fibonacci sequence:\")\n",
+        "  for _ in range(n):\n",
+        "    print(a, end=\" \")\n",
+        "    a,b=b, a+b"
       ]
     },
     {
