--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -927,7 +927,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "id": "5bebd1f3-2606-4102-aa55-01cb1650f632",
       "metadata": {
         "id": "5bebd1f3-2606-4102-aa55-01cb1650f632",
@@ -2022,14 +2022,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
       "metadata": {
-        "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49"
+        "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
+        "outputId": "aa41df6d-73f0-457d-d23e-b0195f61b777",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number greater than 50 found:60\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program that breaks out of a loop when a specific condition is met (e.g., when a number greater than 50 is found). is"
+        "# Write a Python program that breaks out of a loop when a specific condition is met (e.g., when a number greater than 50 is found). is\n",
+        "numbers=[10,20,30,60,40,50]\n",
+        "for num in numbers:\n",
+        "  if num>50:\n",
+        "    print(f\"Number greater than 50 found:{num}\")\n",
+        "    break\n",
+        "\n",
+        ""
       ]
     },
     {
