--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2022,7 +2022,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
       "metadata": {
         "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
@@ -2047,20 +2047,48 @@
         "  if num>50:\n",
         "    print(f\"Number greater than 50 found:{num}\")\n",
         "    break\n",
-        "\n",
-        ""
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 99,
       "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed",
       "metadata": {
-        "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed"
+        "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed",
+        "outputId": "8c66456f-d92f-410c-de1e-b7bd1d10e22b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n",
+            "11\n",
+            "13\n",
+            "15\n",
+            "17\n",
+            "19\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to skip even numbers while printing numbers from 1 to 20 using a for loop."
+        "# Write a Python program to skip even numbers while printing numbers from 1 to 20 using a for loop.\n",
+        "for number in range(1,20):\n",
+        "  if number%2==0:\n",
+        "    continue\n",
+        "  else:\n",
+        "    print(number)\n",
+        "\n",
+        "\n",
+        ""
       ]
     },
     {
