--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2052,7 +2052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed",
       "metadata": {
         "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed",
@@ -2087,20 +2087,42 @@
         "  else:\n",
         "    print(number)\n",
         "\n",
-        "\n",
-        ""
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 100,
       "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
       "metadata": {
-        "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1"
+        "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
+        "outputId": "2e4d0ac6-214f-481d-d0af-56c029faafd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string:akashreddy\n",
+            "Enter a character to count:a\n",
+            "The character 'a'appears1times in the string.\n",
+            "The character 'a'appears2times in the string.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count how many times a particular character appears in a string using a for loop. (User input for string and character)"
+        "# Write a Python program to count how many times a particular character appears in a string using a for loop. (User input for string and character)\n",
+        "text=input(\"Enter a string:\")\n",
+        "char_to_count=input(\"Enter a character to count:\")\n",
+        "count=0\n",
+        "for char in text:\n",
+        "  if char==char_to_count:\n",
+        "    count+=1\n",
+        "    print(f\"The character '{char_to_count}'appears{count}times in the string.\")\n",
+        "\n"
       ]
     },
     {
