--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2092,7 +2092,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
       "metadata": {
         "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
@@ -2127,14 +2127,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 101,
       "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
       "metadata": {
-        "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011"
+        "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
+        "outputId": "a853736c-2bc0-4a72-de80-a4d7c4ca596e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number:123\n",
+            "The sum of the digits is: 3\n",
+            "The sum of the digits is: 5\n",
+            "The sum of the digits is: 6\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to calculate the sum of digits of a number. (User input for the number)"
+        "# Write a Python program to calculate the sum of digits of a number. (User input for the number)\n",
+        "number=int(input(\"Enter a number:\"))\n",
+        "number=abs(number)\n",
+        "total=0\n",
+        "while number>0:\n",
+        "  total+=number%10\n",
+        "  number//=10\n",
+        "  print(\"The sum of the digits is:\",total)"
       ]
     },
     {
