--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2127,7 +2127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
       "metadata": {
         "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
@@ -2171,14 +2171,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 124,
       "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
       "metadata": {
-        "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6"
+        "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
+        "outputId": "57a0ec67-ca76-4e4f-b53d-6ee2231b2d86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of integers and print the sum of the elements."
+        "# Write a Python program to create a list of integers and print the sum of the elements.\n",
+        "num=[1,2,3,4,5]\n",
+        "res=0\n",
+        "for val in num:\n",
+        "  res+=val\n",
+        "print(res)\n"
       ]
     },
     {
