--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2171,7 +2171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": null,
       "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
       "metadata": {
         "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
@@ -2200,14 +2200,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 125,
       "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
       "metadata": {
-        "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443"
+        "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
+        "outputId": "b9ab3bf7-44a1-49bc-94eb-458e2c241c6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the largest element in a list."
+        "# Write a Python program to find the largest element in a list.\n",
+        "num=[1,5,8,9,7]\n",
+        "res=max(num)\n",
+        "print(res)"
       ]
     },
     {
