--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2200,7 +2200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": null,
       "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
       "metadata": {
         "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
@@ -2227,14 +2227,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 127,
       "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
       "metadata": {
-        "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37"
+        "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
+        "outputId": "443fa79b-bbbd-4f2b-aa40-e399e5b2cd9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[6, 9, 8, 4]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to reverse a list."
+        "# Write a Python program to reverse a list.\n",
+        "num=[4,8,9,6]\n",
+        "res=reversed(num)\n",
+        "print(list(res))"
       ]
     },
     {
