--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2227,11 +2227,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 130,
       "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
       "metadata": {
         "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
-        "outputId": "443fa79b-bbbd-4f2b-aa40-e399e5b2cd9f",
+        "outputId": "adc8ab66-6e38-417d-8b62-48ac328270c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2241,15 +2241,15 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[6, 9, 8, 4]\n"
+            "[1, 2, 7, 9]\n"
           ]
         }
       ],
       "source": [
         "# Write a Python program to reverse a list.\n",
-        "num=[4,8,9,6]\n",
-        "res=reversed(num)\n",
-        "print(list(res))"
+        "num=[1,2,7,9]\n",
+        "res=num\n",
+        "print(res)"
       ]
     },
     {
