--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2227,7 +2227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": null,
       "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
       "metadata": {
         "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
@@ -2254,14 +2254,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 132,
       "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
       "metadata": {
-        "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178"
+        "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
+        "outputId": "657e5c1f-d1a3-418a-b9c9-eeec6ec59f41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 8, 9, 0]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove all occurrences of a specific element from a list."
+        "# Write a Python program to remove all occurrences of a specific element from a list.\n",
+        "num=[5,8,9,0]\n",
+        "res=num\n",
+        "print(res)\n"
       ]
     },
     {
