--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2254,11 +2254,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 133,
       "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
       "metadata": {
         "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
-        "outputId": "657e5c1f-d1a3-418a-b9c9-eeec6ec59f41",
+        "outputId": "3422d76b-7522-4a27-e62c-6a8a8fd87673",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2268,15 +2268,15 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[5, 8, 9, 0]\n"
+            "[5, 6, 7, 8, 0]\n"
           ]
         }
       ],
       "source": [
         "# Write a Python program to remove all occurrences of a specific element from a list.\n",
-        "num=[5,8,9,0]\n",
+        "num=[5,6,7,8,0]\n",
         "res=num\n",
-        "print(res)\n"
+        "print(res)"
       ]
     },
     {
