--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2254,7 +2254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
       "metadata": {
         "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
@@ -2281,14 +2281,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 135,
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
-        "id": "da9ba926-0ab5-46e9-b66d-128088c3225b"
+        "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
+        "outputId": "9df7bab5-2729-4b7c-d30f-fcde0da3fd51",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the index of an element in a list."
+        "# Write a Python program to find the index of an element in a list.\n",
+        "num=[5,9,8,7]\n",
+        "res=num.index(9)\n",
+        "print(res)"
       ]
     },
     {
