--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2281,11 +2281,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 136,
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
         "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
-        "outputId": "9df7bab5-2729-4b7c-d30f-fcde0da3fd51",
+        "outputId": "7bab24b3-271c-46b8-87d7-3b2e05dbcf89",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2295,14 +2295,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n"
+            "2\n"
           ]
         }
       ],
       "source": [
         "# Write a Python program to find the index of an element in a list.\n",
-        "num=[5,9,8,7]\n",
-        "res=num.index(9)\n",
+        "num==[5,8,9,0]\n",
+        "res=num.index(8)\n",
         "print(res)"
       ]
     },
