--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2281,11 +2281,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 137,
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
         "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
-        "outputId": "7bab24b3-271c-46b8-87d7-3b2e05dbcf89",
+        "outputId": "c967218f-f596-4160-b423-203820ad8a14",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2301,8 +2301,8 @@
       ],
       "source": [
         "# Write a Python program to find the index of an element in a list.\n",
-        "num==[5,8,9,0]\n",
-        "res=num.index(8)\n",
+        "num=[8,9,4,5]\n",
+        "res=num.index(4)\n",
         "print(res)"
       ]
     },
