--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2281,7 +2281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": null,
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
         "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
@@ -2308,14 +2308,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 138,
       "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
       "metadata": {
-        "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d"
+        "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
+        "outputId": "21ddfc7e-cf59-450a-92bb-fd1df1caee11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find if a specific element exists in a list."
+        "# Write a Python program to find if a specific element exists in a list.\n",
+        "num=[8,9,4,5]\n",
+        "res=4 in num\n",
+        "print(res)"
       ]
     },
     {
