--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2308,7 +2308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": null,
       "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
       "metadata": {
         "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
@@ -2335,14 +2335,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 144,
       "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
       "metadata": {
-        "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f"
+        "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
+        "outputId": "5ceed1b7-f28d-498e-8356-af6667de64c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[8, 9, 4, 6]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove duplicates from a list."
+        "# Write a Python program to remove duplicates from a list.\n",
+        "num=[9,8,6,4]\n",
+        "res=list(set(num))\n",
+        "print(res)"
       ]
     },
     {
