--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2335,7 +2335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": null,
       "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
       "metadata": {
         "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
@@ -2362,14 +2362,40 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bgWxG-aEWvvF"
+      },
+      "id": "bgWxG-aEWvvF",
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
       "metadata": {
-        "id": "09e5121b-97b3-42e4-8025-f28f3470681b"
+        "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
+        "outputId": "748187cc-c4a0-42c4-a83f-d53b834be586",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count the occurrences of an element in a list."
+        "# Write a Python program to count the occurrences of an element in a list.\n",
+        "num=[8,9,7,6]\n",
+        "res=num.count(8)\n",
+        "print(res)\n",
+        "\n"
       ]
     },
     {
