--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2372,7 +2372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
       "metadata": {
         "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
@@ -2400,14 +2400,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
       "metadata": {
-        "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a"
+        "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "935ac90b-d973-4c82-d19b-0e47c6148348"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number of even numbers in the list:5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to get the number of even numbers in a list."
+        "# Write a Python program to get the number of even numbers in a list.\n",
+        "numbers=[1,2,3,4,5,6,7,8,9,10]\n",
+        "even_count=len([num for num in numbers if num %2==0])\n",
+        "print(f\"The number of even numbers in the list:{even_count}\")"
       ]
     },
     {
