--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2400,7 +2400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
       "metadata": {
         "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
@@ -2427,14 +2427,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
       "metadata": {
-        "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96"
+        "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
+        "outputId": "f7c12b8e-90d3-4d58-a305-543437043373",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 2, 3, 4, 5)\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a tuple and print it."
+        "# Write a Python program to create a tuple and print it.\n",
+        "my_tuple=(1,2,3,4,5)\n",
+        "print(my_tuple)"
       ]
     },
     {
