--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2431,10 +2431,10 @@
       "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
       "metadata": {
         "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
-        "outputId": "26c387c7-2b78-4077-ce3e-a65bec4ef4c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "26c387c7-2b78-4077-ce3e-a65bec4ef4c8"
       },
       "outputs": [
         {
@@ -2453,14 +2453,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
       "metadata": {
-        "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1"
+        "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "68973304-90a1-4068-c27c-276615c7b627"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "List: [1, 2, 3]\n",
+            "Tuple: (1, 2, 3)\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a tuple to a list and vice versa."
+        "# Write a Python program to convert a tuple to a list and vice versa.\n",
+        "tuple_data=(1,2,3)\n",
+        "list_data=list(tuple_data)\n",
+        "print(\"List:\",list_data)\n",
+        "tuple_data=tuple(list_data)\n",
+        "print(\"Tuple:\",tuple_data)"
       ]
     },
     {
