--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2427,7 +2427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
       "metadata": {
         "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
@@ -2453,7 +2453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
       "metadata": {
         "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
@@ -2483,14 +2483,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
       "metadata": {
-        "id": "d5192acc-27f3-456e-9c72-3b276a587bf5"
+        "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
+        "outputId": "60080cb9-100a-49f2-93d4-714c7bcd391b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Maximum: 9\n",
+            "Minimum: 1\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the maximum and minimum values in a tuple."
+        "# Write a Python program to find the maximum and minimum values in a tuple.\n",
+        "data=(4,7,1,9,3)\n",
+        "print(\"Maximum:\",max(data))\n",
+        "print(\"Minimum:\",min(data))"
       ]
     },
     {
