--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2483,7 +2483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
       "metadata": {
         "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
@@ -2511,14 +2511,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
       "metadata": {
-        "id": "43f0a340-9407-4302-af7e-4e63db578bbf"
+        "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
+        "outputId": "88f65f26-4e9d-4813-9ba1-339b7cba4172",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a: 10\n",
+            "b: 20\n",
+            "c: 30\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to unpack a tuple into variables."
+        "from typing_extensions import dataclass_transform\n",
+        "# Write a Python program to unpack a tuple into variables.\n",
+        "data=(10,20,30)\n",
+        "a,b,c=data\n",
+        "print(\"a:\",a)\n",
+        "print(\"b:\",b)\n",
+        "print(\"c:\",c)\n",
+        ""
       ]
     },
     {
