--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2515,10 +2515,10 @@
       "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
       "metadata": {
         "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
-        "outputId": "88f65f26-4e9d-4813-9ba1-339b7cba4172",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "88f65f26-4e9d-4813-9ba1-339b7cba4172"
       },
       "outputs": [
         {
@@ -2544,14 +2544,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
       "metadata": {
-        "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f"
+        "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2a4a5056-b26a-46b2-eb1b-c74f2d887a0d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5}\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to add an element to a set and check if an element exists in the set."
+        "# Write a Python program to add an element to a set and check if an element exists in the set.\n",
+        "data={1,2,3,4}\n",
+        "data.add(5)\n",
+        "print(data)\n",
+        "print(1 in data)\n"
       ]
     },
     {
