--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2511,7 +2511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
       "metadata": {
         "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
@@ -2538,13 +2538,12 @@
         "a,b,c=data\n",
         "print(\"a:\",a)\n",
         "print(\"b:\",b)\n",
-        "print(\"c:\",c)\n",
-        ""
+        "print(\"c:\",c)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
       "metadata": {
         "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
@@ -2573,14 +2572,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
       "metadata": {
-        "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86"
+        "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
+        "outputId": "9729e1e4-77c7-41bb-f1a4-c9f1c335e59d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 2, 'c': 3}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary with keys and values and print it."
+        "# Write a Python program to create a dictionary with keys and values and print it.\n",
+        "data={'a':1,'b':2,'c':3}\n",
+        "print(data)"
       ]
     },
     {
