--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2572,7 +2572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
       "metadata": {
         "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
@@ -2598,14 +2598,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
       "metadata": {
-        "id": "7432174b-fe75-4371-b23a-e2c5d62edb15"
+        "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9d673b34-bd5d-4aad-c552-9908a280f523"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archana\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to access a dictionary value using a key."
+        "# Write a Python program to access a dictionary value using a key.\n",
+        "my_dict={\"name\":\"Archana\",\"age\":20,\"city\":\"Armoor\"}\n",
+        "print(my_dict[\"name\"])"
       ]
     },
     {
