--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2598,7 +2598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
       "metadata": {
         "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
@@ -2624,14 +2624,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
       "metadata": {
-        "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2"
+        "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e93ab7c8-b12d-4738-e14f-51fe8c296995"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a key exists in a dictionary."
+        "# Write a Python program to check if a key exists in a dictionary.\n",
+        "my_dict={\"name\":\"Archana\",\"age\":20}\n",
+        "print(\"name\" in my_dict)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
