--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2661,7 +2661,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to merge two dictionaries."
+        "# Write a Python program to merge two dictionaries.\n"
       ]
     },
     {
