--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2654,14 +2654,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
       "metadata": {
-        "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d"
+        "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0948e9b9-9a8a-49cb-9a2e-37d485c86372"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 3, 'c': 4}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to merge two dictionaries.\n"
+        "# Write a Python program to merge two dictionaries.\n",
+        "dict1={'a':1,'b':2}\n",
+        "dict2={'b':3,'c':4}\n",
+        "merged_dict=dict1|dict2\n",
+        "print(merged_dict)\n"
       ]
     },
     {
